# SCVTerraVision

./: .gitignore  LICENSE  README.md  pyproject.toml
.claude/: settings.local.json
configs/datasets/: rellis3d.yaml  rugd.yaml
configs/model/: dinov2_dpt.yaml  dinov2_linear.yaml
configs/taxonomy/: traversability_v1.yaml
configs/train/: default.yaml
docs/: PHASE2_EXECUTION.md  ROADMAP.md
scripts/: download_datasets.py  eval.py  smoke_test.py  train.py  verify_dataset.py  visualize_samples.py
src/camera_perception/: __init__.py
src/camera_perception/models/: losses.py
src/camera_perception/models/backbones/: __init__.py  dinov2.py
src/camera_perception/models/heads/: __init__.py  dpt.py  linear.py
src/camera_perception/training/: callbacks.py  data_module.py  lit_segmenter.py  metrics.py
tests/: conftest.py  test_callbacks.py  test_datasets.py  test_models.py  test_taxonomy.py  test_transforms.py
